--- a/manifest.yml
+++ b/manifest.yml
@@ -6,6 +6,6 @@
     buildpack: python_buildpack
   - name: onlinecourse-nginx
     routes:
-      - route: django-app-coursera.eu-gb.cf.appdomain.cloud//static
+      - route: django-app-coursera.eu-gb.cf.appdomain.cloud/static
     memory: 128M
     buildpack: staticfile_buildpack
